--- a/views/success.hbs
+++ b/views/success.hbs
@@ -4,7 +4,9 @@
   <div class="mb-3">
     <input type="url" class="form-control mb-2" name="url" id="url" placeholder="Input URL here" aria-describedby="urlHelp" value="{{url}}" disabled readonly>
     <p class="mb-2">Success! Please use this link:</p>
-    <p class="mb-2">{{shortUrl}}</p>
+    <a href="/{{shortUrl}}" class="mb-2" id="short-url">{{shortUrl}}</a>
   </div>
-  <button type="button" class="btn btn-primary">Copy</button>
+  <button type="button" class="btn btn-primary" id="copy-url">Copy</button>
 </div>
+
+<script src="./javascript/index.js"></script>
