--- a/views/success.hbs
+++ b/views/success.hbs
@@ -4,7 +4,7 @@
   <div class="mb-3">
     <input type="url" class="form-control mb-2" name="url" id="url" placeholder="Input URL here" aria-describedby="urlHelp" value="{{url}}" disabled readonly>
     <p class="mb-2">Success! Please use this link:</p>
-    <a href="/{{shortUrl}}" class="mb-2" id="short-url">{{shortUrl}}</a>
+    <a href="/{{id}}" class="mb-2" id="short-url">{{id}}</a>
   </div>
   <button type="button" class="btn btn-primary" id="copy-url">Copy</button>
 </div>
