--- a/views/success.hbs
+++ b/views/success.hbs
@@ -1,12 +1,12 @@
-<div class="container my-3">
+<div class="container d-flex flex-column align-items-center my-3">
   <h2 class="d-flex justify-content-center my-5">URL Shortener</h2>
-  <i class="fas fa-link link-icon my-5"></i>
-  <div class="mb-3">
+  <i class="fas fa-link link-icon mb-5"></i>
+  <div class="d-flex flex-column col-12 col-md-8 mb-3">
     <input type="url" class="form-control mb-2" name="url" id="url" placeholder="Input URL here" aria-describedby="urlHelp" value="{{url}}" disabled readonly>
     <p class="mb-2">Success! Please use this link:</p>
-    <a href="/{{id}}" class="mb-2" id="short-url">{{id}}</a>
+    <a href="/{{id}}" class="col-auto mb-2" id="short-url">{{id}}</a>
   </div>
   <button type="button" class="btn btn-primary" id="copy-url">Copy</button>
 </div>
 
-<script src="./javascript/index.js"></script>
+<script src="./javascript/success.js"></script>
